# esp32-bluetooth-speaker

./: .gitignore  CMakeLists.txt  README.md  partitions_two_ota_no_factory.csv  partitions_two_ota_small_factory.csv  platformio.ini  sdkconfig.defaults  sdkconfig.lolin32  sdkconfig.lolin32-factory  sdkconfig.lolin32-ota
components/: mdns
components/ota_update/: CMakeLists.txt  component.mk  ota_update.c
components/ota_update/include/: ota_update.h
components/syslog_client/: CMakeLists.txt  Kconfig  component.mk  syslog_client.c
components/syslog_client/include/: syslog_client.h
components/wifi_helper/: CMakeLists.txt  Kconfig  component.mk  wifi_helper.c
components/wifi_helper/include/: wifi_helper.h
main/: CMakeLists.txt  Kconfig.projbuild  bt_app_av.c  bt_app_av.h  bt_app_core.c  bt_app_core.h  bt_app_ota.c  bt_app_ota.h  bt_app_volume_control.c  bt_app_volume_control.h  main.c  ota-factory-app.c
